--- a/Day02/WpfBikeShop/Wpf/Contact.xaml
+++ b/Day02/WpfBikeShop/Wpf/Contact.xaml
@@ -15,7 +15,7 @@
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="100"/>
-            <ColumnDefinition/>
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
         <TextBlock Text="보내는 사람" Grid.Row="0" Grid.Column="0" Margin="0,17,3,17"
