--- a/portfolio/WpfPortfolio/WpfNaverMovieFinder/MainWindow.xaml
+++ b/portfolio/WpfPortfolio/WpfNaverMovieFinder/MainWindow.xaml
@@ -31,7 +31,8 @@
         </Grid.ColumnDefinitions>
         
         <!-- 검색창 영역 -->
-        <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal">
+        <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal"
+                    HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
             <TextBox x:Name="txtSearchName" Width="500" Margin="5,10" FontSize="14"
                      mah:TextBoxHelper.Watermark="검색할 영화명 입력"
                      mah:TextBoxHelper.UseFloatingWatermark="True"
@@ -52,16 +53,88 @@
         <!-- 검색결과 그리드 영역 -->
         <DataGrid x:Name="grdResult" Grid.Row="2" Grid.Column="1" Margin="10"
                   Style="{StaticResource MahApps.Styles.DataGrid.Azure}"
-                  IsReadOnly="True">
-            
+                  IsReadOnly="True" ItemsSource="{Binding}" AutoGenerateColumns="False"
+                  SelectedCellsChanged="grdResult_SelectedCellsChanged">
+            <DataGrid.Columns>
+                <DataGridTextColumn Binding="{Binding Title}" Header="한글제목" FontWeight ="Bold"/>
+                <DataGridTextColumn Binding="{Binding SubTitle}" Header="영어제목"/>
+                <DataGridTextColumn Binding="{Binding PubDate}" Header="개봉일"/>
+                <DataGridTextColumn Binding="{Binding Director}" Header="감독"/>
+                <DataGridTextColumn Binding="{Binding Actor}" Header="배우"/>
+                <DataGridTextColumn Binding="{Binding UserRating}" Header="평점"/>
+            </DataGrid.Columns>
         </DataGrid>
         <!-- 포스터 영역 -->
         <Image x:Name="imgPoster" Grid.Row="1" Grid.Column="2" Grid.RowSpan="2"
                Source="/resource/No_Picture.jpg" Margin="10,60"/>
         
+        <!-- 버튼 영역 -->
+        <StackPanel  Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2" Orientation="Horizontal">
+            <Button x:Name="btnAddWatchlist" Content="즐겨찾기 추가" Margin="10"
+                    Width="150" FontSize ="12" Click="btnAddWatchlist_Click">
+                <Button.ContentTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="{Binding}" Margin="10,0"/>
+                            <iconPacks:PackIconForkAwesome Kind="Plus" />
+                        </StackPanel>
+                    </DataTemplate>
+                </Button.ContentTemplate>
+            </Button>
+            <Button x:Name="btnViewWatchlist" Content="즐겨찾기 보기" Margin="10"
+                    Width="150" FontSize ="12" Click="btnViewWatchlist_Click">
+                <Button.ContentTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="{Binding}" Margin="10,0"/>
+                            <iconPacks:PackIconForkAwesome Kind="List" />
+                        </StackPanel>
+                    </DataTemplate>
+                </Button.ContentTemplate>
+            </Button>
+            <Button x:Name="btnDelWatchlist" Content="즐겨찾기 삭제" Margin="10"
+                    Width="150" FontSize ="12" Click="btnDelWatchlist_Click">
+                <Button.ContentTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="{Binding}" Margin="10,0"/>
+                            <iconPacks:PackIconForkAwesome Kind="Trash" />
+                        </StackPanel>
+                    </DataTemplate>
+                </Button.ContentTemplate>
+            </Button>
+            <Button x:Name="btnWatchTrailer" Content="예고편 보기" Margin="10"
+                    Width="150" FontSize ="12" Click="btnWatchTrailer_Click">
+                <Button.ContentTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="{Binding}" Margin="10,0"/>
+                            <iconPacks:PackIconForkAwesome Kind="YoutubePlay" />
+                        </StackPanel>
+                    </DataTemplate>
+                </Button.ContentTemplate>
+            </Button>
+            <Button x:Name="btnNaverMovie" Content="네이버 영화" Margin="10"
+                    Width="150" FontSize ="12" Click="btnNaverMovie_Click">
+                <Button.ContentTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="{Binding}" Margin="10,0"/>
+                            <iconPacks:PackIconForkAwesome Kind="Film" />
+                        </StackPanel>
+                    </DataTemplate>
+                </Button.ContentTemplate>
+            </Button>
+
+
+
+        </StackPanel>
+        
         <!-- 상태바 영역 -->
         <StatusBar Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="4">
             <StatusBarItem Content="Naver &amp; Youtube OpenAPI App"/>
+            <Separator Style="{StaticResource MahApps.Styles.Separator.StatusBar}"/>
+            <StatusBarItem x:Name="stsResult"/>
         </StatusBar>
     </Grid>
 </mah:MetroWindow>
