--- a/portfolio/WpfPortfolio/WpfNaverMovieFinder/MainWindow.xaml
+++ b/portfolio/WpfPortfolio/WpfNaverMovieFinder/MainWindow.xaml
@@ -83,7 +83,8 @@
                 </Button.ContentTemplate>
             </Button>
             <Button x:Name="btnViewWatchlist" Content="즐겨찾기 보기" Margin="10"
-                    Width="150" FontSize ="12" Click="btnViewWatchlist_Click">
+                    Style="{StaticResource MahApps.Styles.Button.Dialogs.AccentHighlight}"
+                    Width="150" Height="60" FontSize ="12" Click="btnViewWatchlist_Click">
                 <Button.ContentTemplate>
                     <DataTemplate>
                         <StackPanel Orientation="Horizontal">
