--- a/Day05/WpfCaliburnApp/App.xaml
+++ b/Day05/WpfCaliburnApp/App.xaml
@@ -1,11 +1,13 @@
 ﻿<Application x:Class="WpfCaliburnApp.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WpfCaliburnApp"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:WpfCaliburnApp">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary>
+                    <local:Bootstrapper x:Key="bootscrapper"/>
+                </ResourceDictionary>
                 <!-- MahApps.Metro resource dictionaries. Make sure that all file names are Case Sensitive! -->
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
