--- a/portfolio/WpfPortfolio/WpfSmartHomeMonitoringApp/Views/RealTimeView.xaml
+++ b/portfolio/WpfPortfolio/WpfSmartHomeMonitoringApp/Views/RealTimeView.xaml
@@ -3,10 +3,192 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+             xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
              xmlns:local="clr-namespace:WpfSmartHomeMonitoringApp.Views"
              mc:Ignorable="d" 
              d:DesignHeight="700" d:DesignWidth="1280">
+    <UserControl.Resources>
+        <Style x:Key="ConsoleTextBox" TargetType="{x:Type TextBox}">
+            <Setter Property="IsReadOnly" Value="True"/>
+            <Setter Property="Background" Value="AntiqueWhite"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="TextBox">
+                        <ScrollViewer RenderTransformOrigin="0.5,0.5" VerticalScrollBarVisibility="Auto">
+                            <ScrollViewer.RenderTransform>
+                                <ScaleTransform ScaleY="-1"/>
+                            </ScrollViewer.RenderTransform>
+                            <TextBox Text="{TemplateBinding Text}" RenderTransformOrigin="0.5,0.5">
+                                <TextBox.RenderTransform>
+                                    <ScaleTransform ScaleY="-1"/>
+                                </TextBox.RenderTransform>
+                            </TextBox>
+                        </ScrollViewer>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </UserControl.Resources>
     <Grid>
-        <Label Content="RealTimeView" FontSize="30"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <StackPanel Grid.Row="0" Grid.Column="0" Orientation="Horizontal">
+            <iconPacks:PackIconSimpleIcons Kind="SmartThings" VerticalAlignment="Center" Margin="5"
+                                           Width="30" Height="30"
+                                           RenderTransformOrigin="0.5,0.5"
+                                           Foreground="DodgerBlue"/>
+            <Label Grid.Row="0" Grid.Column="0" Content="RealTime IoT Data Monitoring"
+               Style="{StaticResource MahApps.Styles.Label}"
+               VerticalAlignment="Center"
+               FontSize="30" FontWeight="Bold" Foreground="DodgerBlue"/>
+        </StackPanel>
+        <Grid Grid.Row="1" Grid.Column="0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="50"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Label Grid.Row="0" Grid.Column="1" Content="Living Room" FontSize="16" FontWeight="Black"
+                   HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <Label Grid.Row="0" Grid.Column="2" Content="Dining Room" FontSize="16" FontWeight="Black"
+                   HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <Label Grid.Row="0" Grid.Column="3" Content="Bed Room" FontSize="16" FontWeight="Black"
+                   HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <Label Grid.Row="0" Grid.Column="4" Content="Bath Room" FontSize="16" FontWeight="Black"
+                   HorizontalAlignment="Center" VerticalAlignment="Center"/>
+
+            <Label Grid.Row="1" Grid.Column="0" FontSize="16"
+                   Content="Temperature" 
+                   HorizontalAlignment="Center" VerticalAlignment="Center"
+                   RenderTransformOrigin="0.5,0.5">
+                <Label.RenderTransform>
+                    <TransformGroup>
+                        <ScaleTransform/>
+                        <SkewTransform/>
+                        <RotateTransform Angle="-90"/>
+                        <TranslateTransform/>
+                    </TransformGroup>
+                </Label.RenderTransform>
+
+            </Label>
+            <Label Grid.Row="2" Grid.Column="0" FontSize="16"
+                   Content="Humidity"
+                   HorizontalAlignment="Center" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5">
+                <Label.RenderTransform>
+                    <TransformGroup>
+                        <ScaleTransform/>
+                        <SkewTransform/>
+                        <RotateTransform Angle="-90"/>
+                        <TranslateTransform/>
+                    </TransformGroup>
+                </Label.RenderTransform>
+
+            </Label>
+            
+            <!-- living room live chart -->
+            <lvc:Gauge Grid.Row="1" Grid.Column="1" Margin="5"
+                       From="0" To="50" Value="{Binding LivingTempVal}"
+                       LabelsVisibility="Visible">
+                <lvc:Gauge.GaugeActiveFill>
+                    <LinearGradientBrush>
+                        <GradientStop Color="Yellow" Offset="0.0"/>
+                        <GradientStop Color="Orange" Offset="0.5"/>
+                        <GradientStop Color="Red" Offset="1.0"/>
+                    </LinearGradientBrush>
+                </lvc:Gauge.GaugeActiveFill>
+
+            </lvc:Gauge>
+            <!-- dining room live chart-->
+            <lvc:Gauge Grid.Row="1" Grid.Column="2" Margin="5"
+                       From="0" To="50" Value="{Binding DiningTempVal}"
+                       LabelsVisibility="Visible">
+                <lvc:Gauge.GaugeActiveFill>
+                    <LinearGradientBrush>
+                        <GradientStop Color="Yellow" Offset="0.0"/>
+                        <GradientStop Color="Orange" Offset="0.5"/>
+                        <GradientStop Color="Red" Offset="1.0"/>
+                    </LinearGradientBrush>
+                </lvc:Gauge.GaugeActiveFill>
+
+            </lvc:Gauge>
+            
+            <!--bed-->
+            <lvc:Gauge Grid.Row="1" Grid.Column="3" Margin="5"
+                       From="0" To="50" Value="{Binding BedTempVal}"
+                       LabelsVisibility="Visible">
+                <lvc:Gauge.GaugeActiveFill>
+                    <LinearGradientBrush>
+                        <GradientStop Color="Yellow" Offset="0.0"/>
+                        <GradientStop Color="Orange" Offset="0.5"/>
+                        <GradientStop Color="Red" Offset="1.0"/>
+                    </LinearGradientBrush>
+                </lvc:Gauge.GaugeActiveFill>
+
+            </lvc:Gauge>
+            
+            <!--bath-->
+            <lvc:Gauge Grid.Row="1" Grid.Column="4" Margin="5"
+                       From="0" To="50" Value="{Binding BathTempVal}"
+                       LabelsVisibility="Visible">
+                <lvc:Gauge.GaugeActiveFill>
+                    <LinearGradientBrush>
+                        <GradientStop Color="Yellow" Offset="0.0"/>
+                        <GradientStop Color="Orange" Offset="0.5"/>
+                        <GradientStop Color="Red" Offset="1.0"/>
+                    </LinearGradientBrush>
+                </lvc:Gauge.GaugeActiveFill>
+
+            </lvc:Gauge>
+
+            <lvc:AngularGauge Grid.Row="2" Grid.Column="1" Margin="10"
+                              FromValue="0" ToValue="90" FontSize="16"
+                              SectionsInnerRadius="0.7" Value="{Binding LivingHumidVal}">
+                <lvc:AngularGauge.Sections>
+                    <lvc:AngularSection FromValue="0" ToValue="40" Fill="GreenYellow"/>
+                    <lvc:AngularSection FromValue="41" ToValue="60" Fill="Orange"/>
+                    <lvc:AngularSection FromValue="61" ToValue="90" Fill="Red"/>
+                </lvc:AngularGauge.Sections>
+            </lvc:AngularGauge>
+            <!--dining-->
+            <lvc:AngularGauge Grid.Row="2" Grid.Column="2" Margin="10"
+                              FromValue="0" ToValue="90" FontSize="16"
+                              SectionsInnerRadius="0.7" Value="{Binding DiningHumidVal}">
+                <lvc:AngularGauge.Sections>
+                    <lvc:AngularSection FromValue="0" ToValue="40" Fill="GreenYellow"/>
+                    <lvc:AngularSection FromValue="41" ToValue="60" Fill="Orange"/>
+                    <lvc:AngularSection FromValue="61" ToValue="90" Fill="Red"/>
+                </lvc:AngularGauge.Sections>
+            </lvc:AngularGauge>
+            <!--bed-->
+            <lvc:AngularGauge Grid.Row="2" Grid.Column="3" Margin="10"
+                              FromValue="0" ToValue="90" FontSize="16"
+                              SectionsInnerRadius="0.7" Value="{Binding BedHumidVal}">
+                <lvc:AngularGauge.Sections>
+                    <lvc:AngularSection FromValue="0" ToValue="40" Fill="GreenYellow"/>
+                    <lvc:AngularSection FromValue="41" ToValue="60" Fill="Orange"/>
+                    <lvc:AngularSection FromValue="61" ToValue="90" Fill="Red"/>
+                </lvc:AngularGauge.Sections>
+            </lvc:AngularGauge>
+            <!--bath-->
+            <lvc:AngularGauge Grid.Row="2" Grid.Column="4" Margin="10"
+                              FromValue="0" ToValue="90" FontSize="16"
+                              SectionsInnerRadius="0.7" Value="{Binding BathHumidVal}">
+                <lvc:AngularGauge.Sections>
+                    <lvc:AngularSection FromValue="0" ToValue="40" Fill="GreenYellow"/>
+                    <lvc:AngularSection FromValue="41" ToValue="60" Fill="Orange"/>
+                    <lvc:AngularSection FromValue="61" ToValue="90" Fill="Red"/>
+                </lvc:AngularGauge.Sections>
+            </lvc:AngularGauge>
+        </Grid>
     </Grid>
 </UserControl>
