--- a/portfolio/WpfPortfolio/WpfSmartHomeMonitoringApp/Views/HistoryView.xaml
+++ b/portfolio/WpfPortfolio/WpfSmartHomeMonitoringApp/Views/HistoryView.xaml
@@ -56,7 +56,7 @@
                 Style="{StaticResource MahApps.Styles.Button.Dialogs.Accent}"/>
         </Grid>
         <Grid Grid.Row="2" Grid.Column="0" Margin="15">
-            <oxy:PlotView Model="{Binding SmartHomeModel}"/>
+            <oxy:PlotView Model="{Binding HistoryModel}"/>
         </Grid>
     </Grid>
 </UserControl>
